[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
surrealdb = "1.5.4"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
